<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/default_size_350_dp"
    android:layout_height="wrap_content"
    android:elevation="@dimen/default_size_10_dp"
    app:cardCornerRadius="@dimen/default_size_20_dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_size_20_dp">

        <TextView
            android:id="@+id/dialogTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title"
            android:textColor="@color/black_80"
            android:textSize="@dimen/default_text_32_sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/animationViewDialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationViewDialog"
            android:layout_width="@dimen/default_size_150_dp"
            android:layout_height="@dimen/default_size_150_dp"
            android:visibility="gone"
            android:elevation="10dp"
            app:layout_constraintBottom_toTopOf="@+id/dialogTextFailure"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogTextTitle"/>

        <TextView
            android:id="@+id/dialogTextFailure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/dialog_text_failure"
            android:textAlignment="center"
            android:textColor="@color/black_80"
            android:textSize="@dimen/default_text_20_sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/animationViewDialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/animationViewDialog" />

        <LinearLayout
            android:id="@+id/dialogViewCheckIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/default_size_16_dp"
            app:layout_constraintTop_toBottomOf="@+id/animationViewDialog"
            tools:layout_editor_absoluteX="20dp">

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/dialog_edit_name"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@+id/animationViewDialog" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/dialog_edit_email"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/dialogButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_size_16_dp"
                android:text="@string/dialog_confirm_button" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>