<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_80">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_size_8_dp"
            android:layout_marginTop="@dimen/default_size_16_dp"
            android:elevation="@dimen/default_size_1_dp"
            android:contentDescription="@string/back_button_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_left"/>

        <ImageView
            android:id="@+id/imageShareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_size_16_dp"
            android:elevation="@dimen/default_size_1_dp"
            android:contentDescription="@string/share_button_description"
            app:layout_constraintBottom_toBottomOf="@+id/imgBackButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgBackButton"
            app:srcCompat="@drawable/ic_share" />

        <ImageView
            android:id="@+id/event_details_image"
            android:layout_width="@dimen/default_size_0_dp"
            android:layout_height="@dimen/default_size_500_dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:importantForAccessibility="no"/>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_size_60_dp"
            android:background="@color/fragment_view_transparency"
            android:elevation="@dimen/default_size_1_dp"
            app:layout_constraintBottom_toBottomOf="@+id/event_details_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:importantForAccessibility="no"/>

        <TextView
            android:id="@+id/event_details_title"
            android:layout_width="@dimen/default_size_0_dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_size_8_dp"
            android:elevation="@dimen/default_size_1_dp"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_24_sp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="@+id/event_details_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view"
            tools:text="Event Title" />

        <Button
            android:id="@+id/btnCheckIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_size_64_dp"
            android:layout_margin="@dimen/default_size_8_dp"
            android:backgroundTint="@color/black_75"
            android:text="@string/details_fragment_check_in"
            android:textColor="@color/blue_00C3FD"
            android:textSize="@dimen/default_text_18_sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:icon="@drawable/ic_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_details_image"
            android:contentDescription="@string/check_in_description"/>

        <TextView
            android:id="@+id/event_details_description"
            android:layout_width="@dimen/default_size_0_dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_size_8_dp"
            android:text="@string/details_fragment"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_18_sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCheckIn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>