<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flipper_events"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_80"
    tools:context=".presenter.fragments.events.EventsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_rawRes="@raw/loading_progress" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presenter.fragments.events.EventsFragment">

        <TextView
            android:id="@+id/eventsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_size_8_dp"
            android:text="@string/events_title"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_18_sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/aboutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_size_8_dp"
            android:elevation="@dimen/default_size_1_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_info" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/events_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/eventsTitle"
            tools:listitem="@layout/events_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="350dp"
            android:layout_height="350dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_url="https://assets5.lottiefiles.com/packages/lf20_iq9koc12.json" />

        <TextView
            android:id="@+id/error_tittle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/events_generic_error_title"
            android:textAlignment="center"
            android:textColor="@color/gray_2424"
            android:textSize="48sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="@+id/lottieAnimationView"
            app:layout_constraintEnd_toEndOf="@+id/lottieAnimationView"
            app:layout_constraintStart_toStartOf="@+id/lottieAnimationView" />

        <TextView
            android:id="@+id/error_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/events_generic_error_description"
            android:textAlignment="center"
            android:textColor="@color/gray_3535"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/lottieAnimationView"
            app:layout_constraintStart_toStartOf="@+id/lottieAnimationView"
            app:layout_constraintTop_toBottomOf="@+id/error_tittle" />

        <Button
            android:id="@+id/btnTryAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/events_btn_try_again"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_description" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ViewFlipper>